major update, adding conda packages to several tools

--- a/bcftools/1.2/Dockerfile
+++ b/bcftools/1.2/Dockerfile
@@ -9,41 +9,27 @@
 # Tags:             Genomics
 # Provides:         Bcftools 1.2
 # Base Image:       biodckr/biodocker
-# Build Cmd:        docker build biodckrdev/bcftools 1.2/.
-# Pull Cmd:         docker pull biodckrdev/bcftools
-# Run Cmd:          docker run biodckrdev/bcftools bcftools
+# Build Cmd:        docker build biodckr/bcftools 1.2/.
+# Pull Cmd:         docker pull biodckr/bcftools
+# Run Cmd:          docker run biodckr/bcftools
 #################################################################
 
-# Set the base image to Ubuntu
+# Source Image
 FROM biodckr/biodocker
 
 ################## BEGIN INSTALLATION ###########################
 
-# Change user to root
-USER root
+# install
+RUN conda install bcftools=1.2
 
-ENV ZIP=bcftools-1.2.tar.bz2
-ENV URL=https://github.com/BioDocker/software-archive/releases/download/bcftools
-ENV FOLDER=bcftools-1.2
-ENV DST=/tmp
-
-RUN wget $URL/$ZIP -O $DST/$ZIP && \
-  tar xvf $DST/$ZIP -C $DST && \
-  rm $DST/$ZIP && \
-  cd $DST/$FOLDER && \
-  make && \
-  make install && \
-  cd / && \
-  rm -rf $DST/$FOLDER
-
-# Change user to back to biodocker
-USER biodocker
-
-# CHANGE WORKDIR TO /DATA
+# Change workdir to /data/
 WORKDIR /data/
+
+# Define default command
+CMD ["bcftools"]
 
 ##################### INSTALLATION END ##########################
 
 # File Author / Maintainer
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
-# Modified by Felipe da Veiga Leprevost 08-27-2015
+# Modified by Felipe da Veiga Leprevost 06-17-2016
