--- a/bowtie2/2.2.8/Dockerfile
+++ b/bowtie2/2.2.8/Dockerfile
@@ -2,16 +2,16 @@
 # Dockerfile
 #
 # Version:          2
-# Software:         bowtie
-# Software Version: 1.1.2
+# Software:         bowtie2
+# Software Version: 2.2.8
 # Description:      An ultrafast memory-efficient short read aligner
-# Website:          http://bowtie-bio.sourceforge.net/index.shtml|https://github.com/BenLangmead/bowtie
+# Website:          http://bowtie-bio.sourceforge.net/bowtie2/index.shtml
 # Tags:             Genomics
-# Provides:         bowtie 1.1.2
+# Provides:         bowtie2 2.2.8
 # Base Image:       biodckr/biodocker
-# Build Cmd:        docker build biodckrdev/bowtie 1.1.2/.
-# Pull Cmd:         docker pull biodckrdev/bowtie
-# Run Cmd:          docker run biodckrdev/bowtie
+# Build Cmd:        docker build --rm -t biodckrdev/bowtie2 2.2.8/.
+# Pull Cmd:         docker pull biodckr/bowtie2
+# Run Cmd:          docker run --rm -it biodckr/bowtie2
 #################################################################
 
 # Source Image
@@ -20,16 +20,15 @@ FROM biodckr/biodocker
 ################## BEGIN INSTALLATION ###########################
 
 # install
-RUN conda install bowtie=1.1.2
+RUN conda install bowtie2=2.2.8
 
 # Change workdir to /data/
 WORKDIR /data/
 
 # Define default command
-CMD ["bowtie"]
+CMD ["bowtie2"]
 
 ##################### INSTALLATION END ##########################
 
 # File Author / Maintainer
-MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
-# Modified by Felipe da Veiga Leprevost 06-17-2016
+MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
