--- a/emboss/6.6.0/Dockerfile
+++ b/emboss/6.6.0/Dockerfile
@@ -1,15 +1,15 @@
 #################################################################
 # Dockerfile
 #
-# Version:          2
+# Version:          3
 # Software:         emboss
-# Software Version: 6.6.0-1
+# Software Version: 6.6.0
 # Description:      software analysis package specially developed for the needs of the molecular biology (e.g. EMBnet) user community
 # Website:          http://emboss.sourceforge.net/what/
 # Tags:             Proteomics|Genomics|General
-# Provides:         emboss 6.6.0-1
+# Provides:         emboss 6.6.0
 # Base Image:       biodckr/biodocker:latest
-# Build Cmd:        docker build --rm -t biodckr/emboss 6.6.0-1/.
+# Build Cmd:        docker build --rm -t biodckr/emboss 6.6.0/.
 # Pull Cmd:         docker pull biodckr/emboss
 # Run Cmd:          docker run --rm biodckr/emboss
 #################################################################
@@ -24,7 +24,7 @@ USER root
 # Install EMBOSS package
 RUN apt-get update && \
   apt-get install -y \
-  emboss=6.6.0-1 && \
+  emboss=6.6.0+dfsg-3build1 && \
   apt-get clean && \
   apt-get purge && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
@@ -37,4 +37,4 @@ WORKDIR /data/
 
 # File Author / Maintainer
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 01-26-2016
+# Modified by Felipe da Veiga Leprevost 08-27-2016
