--- a/bowtie2/2.2.8/Dockerfile
+++ b/bowtie2/2.2.8/Dockerfile
@@ -1,34 +1,22 @@
-#################################################################
-# Dockerfile
-#
-# Version:          2
-# Software:         bowtie2
-# Software Version: 2.2.8
-# Description:      An ultrafast memory-efficient short read aligner
-# Website:          http://bowtie-bio.sourceforge.net/bowtie2/index.shtml
-# Tags:             Genomics
-# Provides:         bowtie2 2.2.8
-# Base Image:       biodckr/biodocker
-# Build Cmd:        docker build --rm -t biodckrdev/bowtie2 2.2.8/.
-# Pull Cmd:         docker pull biodckr/bowtie2
-# Run Cmd:          docker run --rm -it biodckr/bowtie2
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-# Source Image
-FROM biodckr/biodocker
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="1"
+LABEL software="bowtie2"
+LABEL software.version="2.2.8"
+LABEL description="an ultrafast memory-efficient short read aligner"
+LABEL website="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
+LABEL documentation="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
+LABEL license="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
+LABEL tags="Genomics"
 
-################## BEGIN INSTALLATION ###########################
+# Maintainer
+MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
 
-# install
 RUN conda install bowtie2=2.2.8
 
-# Change workdir to /data/
 WORKDIR /data/
 
-# Define default command
 CMD ["bowtie2"]
-
-##################### INSTALLATION END ##########################
-
-# File Author / Maintainer
-MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
