--- a/comet/2015011/Dockerfile
+++ b/comet/2015011/Dockerfile
@@ -1,19 +1,19 @@
-#################################################################
-# Dockerfile
-#
-# Version:          2
-# Software:         Comet
-# Software Version: 2015011
-# Base Image:       biodckr/biodocker:latest
-# Build Cmd:        docker build -t biodckr/comet 2015011/.
-# Pull Cmd:         docker pull biodckr/comet
-# Run Cmd:          docker run biodckr/comet comet
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-# Set the base image to biodckr/biodocker
-FROM biodckr/biodocker:latest
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="3"
+LABEL software="Comet"
+LABEL software.version="2015011"
+LABEL description="an open source tandem mass spectrometry sequence database search tool"
+LABEL website="http://comet-ms.sourceforge.net/"
+LABEL documentation="http://comet-ms.sourceforge.net/parameters/parameters_201601/"
+LABEL license="http://comet-ms.sourceforge.net/"
+LABEL tags="Proteomics"
 
-################## BEGIN INSTALLATION ######################
+# Maintainer
+MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
 USER biodocker
 
@@ -29,8 +29,4 @@ ENV PATH /home/biodocker/bin/Comet:$PATH
 
 WORKDIR /data/
 
-##################### INSTALLATION END #####################
-
-# File Author / Maintainer
-MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 01-26-2016
+CMD ["comet"]
