--- a/comet/2015012/Dockerfile
+++ b/comet/2015012/Dockerfile
@@ -1,30 +1,27 @@
-#################################################################
-# Dockerfile
-#
-# Version:          2
-# Software:         Comet
-# Software Version: 2015012
-# Base Image:       biodckr/biodocker:latest
-# Build Cmd:        docker build -t biodckr/comet 2015012/.
-# Pull Cmd:         docker pull biodckr/comet
-# Run Cmd:          docker run biodckr/comet
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-# Set the base image to biodckr/biodocker
-FROM biodckr/biodocker:latest
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="3"
+LABEL software="Comet"
+LABEL software.version="2015012"
+LABEL description="an open source tandem mass spectrometry sequence database search tool"
+LABEL website="http://comet-ms.sourceforge.net/"
+LABEL documentation="http://comet-ms.sourceforge.net/parameters/parameters_201601/"
+LABEL license="http://comet-ms.sourceforge.net/"
+LABEL tags="Proteomics"
 
-# Set noninterative mode
-ENV DEBIAN_FRONTEND noninteractive
-
-################## BEGIN INSTALLATION ######################
+# Maintainer
+MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
 USER biodocker
 
 RUN ZIP=comet_binaries_2015012.zip && \
-    wget https://github.com/BioDocker/software-archive/releases/download/Comet/$ZIP -O /tmp/$ZIP && \
-    unzip /tmp/$ZIP -d /home/biodocker/bin/Comet/ && \
-    chmod -R 755 /home/biodocker/bin/Comet/* && \
-    rm /tmp/$ZIP
+  wget https://github.com/BioDocker/software-archive/releases/download/Comet/$ZIP -O /tmp/$ZIP && \
+  unzip /tmp/$ZIP -d /home/biodocker/bin/Comet/ && \
+  chmod -R 755 /home/biodocker/bin/Comet/* && \
+  rm /tmp/$ZIP
 
 RUN mv /home/biodocker/bin/Comet/comet.2015012.linux.exe /home/biodocker/bin/Comet/comet
 
@@ -32,8 +29,4 @@ ENV PATH /home/biodocker/bin/Comet:$PATH
 
 WORKDIR /data/
 
-##################### INSTALLATION END #####################
-
-# File Author / Maintainer
-MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 01-26-2016
+CMD ["comet"]
