--- a/crux/2.1/Dockerfile
+++ b/crux/2.1/Dockerfile
@@ -1,23 +1,19 @@
-#################################################################
-# Dockerfile
-#
-# Version:          2
-# Software:         Crux
-# Software Version: 2.1
-# Description:      a software toolkit for tandem mass spectrometry analysis
-# Website:          http://cruxtoolkit.sourceforge.net/
-# Tags:             Proteomics
-# Provides:         crux 2.1
-# Base Image:       biodckr/biodocker:latest
-# Build Cmd:        docker build --rm -t biodckr/crux 2.1/.
-# Pull Cmd:         docker pull biodckr/crux
-# Run Cmd:          docker run --rm biodckr/crux [crux xlink-assign-ions xlink-score-spectrum]
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-# Set the base image
-FROM biodckr/biodocker:latest
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="2"
+LABEL software="crux"
+LABEL software.version="2.1"
+LABEL description="a software toolkit for tandem mass spectrometry analysis"
+LABEL website="http://cruxtoolkit.sourceforge.net/"
+LABEL documentation="http://cruxtoolkit.sourceforge.net/"
+LABEL license="http://cruxtoolkit.sourceforge.net/"
+LABEL tags="Proteomics"
 
-################## BEGIN INSTALLATION ###########################
+# Maintainer
+MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
 USER biodocker
 
@@ -30,9 +26,3 @@ RUN ZIP=crux-2.1.Linux.x86_64.zip && \
 ENV PATH /home/biodocker/bin:$PATH
 
 WORKDIR /data/
-
-##################### INSTALLATION END ##########################
-
-# File Author / Maintainer
-MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 01-26-2016
