--- a/denovogui/1.10.4/Dockerfile
+++ b/denovogui/1.10.4/Dockerfile
@@ -1,23 +1,19 @@
-#################################################################
-# Dockerfile
-#
-# Version:          1
-# Software:         denovogui
-# Software Version: 1.10.4
-# Description:      graphical user interface for de novo sequencing of tandem mass spectra
-# Website:          https://code.google.com/p/denovogui/
-# Tags:             Proteomics
-# Provides:         denovogui 1.10.4
-# Base Image:       biodckr/biodocker:latest
-# Build Cmd:        docker build --rm -t biodckr/denovogui 1.10.4/.
-# Pull Cmd:         docker pull biodckr/denovogui
-# Run Cmd:          docker run -ti -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix biodckr/denovogui java -jar /home/biodocker/bin/DeNovoGUI-1.10.4/DeNovoGUI-1.10.4.jar
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-# Set the base image to biodckr/biodocker
-FROM biodckr/biodocker:latest
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="2"
+LABEL software="denovogui"
+LABEL software.version="1.10.4"
+LABEL description="graphical user interface for de novo sequencing of tandem mass spectra"
+LABEL website="https://github.com/compomics/denovogui"
+LABEL documentation="https://github.com/compomics/denovogui"
+LABEL license="https://github.com/compomics/denovogui"
+LABEL tags="Proteomics"
 
-################## BEGIN INSTALLATION ######################
+# Maintainer
+MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
 USER biodocker
 
@@ -33,8 +29,3 @@ RUN ZIP=DeNovoGUI-1.10.4.zip && \
 ENV PATH /home/biodocker/bin/denovogui:$PATH
 
 WORKDIR /data/
-
-##################### INSTALLATION END #####################
-
-# File Author / Maintainer
-MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
