--- a/emboss/6.5.7/Dockerfile
+++ b/emboss/6.5.7/Dockerfile
@@ -1,32 +1,20 @@
-#################################################################
-# Dockerfile
-#
-# Version:          1
-# Software:         emboss
-# Software Version: 6.5.7
-# Description:      software analysis package specially developed for
-#                   the needs of the molecular biology (e.g. EMBnet) user community
-# Website:          http://emboss.sourceforge.net/what/
-# Tags:             Proteomics|Genomics|General
-# Provides:         emboss 6.5.7
-# Base Image:       biodckr/biodocker:latest
-# Build Cmd:        docker build biodckr/emboss 6.5.7/.
-# Pull Cmd:         docker pull biodckr/emboss
-# Run Cmd:          docker run biodckr/emboss
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-# source image
-FROM biodckr/biodocker
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="1"
+LABEL software="emboss"
+LABEL software.version="6.5.7"
+LABEL description="software analysis package"
+LABEL website="http://emboss.sourceforge.net/what/"
+LABEL documentation="http://emboss.sourceforge.net/docs/"
+LABEL license="http://emboss.sourceforge.net/licence/"
+LABEL tags="Proteomics"
 
-################## BEGIN INSTALLATION ###########################
+# Maintainer
+MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
-# install
 RUN conda install emboss=6.5.7
 
-# set work directory
 WORKDIR /data/
-
-##################### INSTALLATION END ##########################
-
-# File Author / Maintainer
-MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
